editor wrap width fix

--- a/src/pages/css/EditorDash.module.css
+++ b/src/pages/css/EditorDash.module.css
@@ -1,6 +1,6 @@
 .wrap {
     display: flex;
-    width: 100vw;
+    width: 100%;
     flex-flow: row wrap;
     align-items:flex-start;
     align-content: center;
